@@ -405,9 +405,19 @@ int main(int argc, char *argv[])
 
 	nvtt::CompressionOptions compressionOptions;
 	compressionOptions.setFormat(format);
-	if (luminance)
+	if (format == nvtt::Format_RGBA)
 	{
-		compressionOptions.setPixelFormat(8, 0xff, 0, 0, 0);
+		if (luminance)
+		{
+			compressionOptions.setPixelFormat(8, 0xff, 0, 0, 0);
+		}
+		else {
+			// @@ Edit this to choose the desired pixel format:
+			//	compressionOptions.setPixelType(nvtt::PixelType_Float);
+			//	compressionOptions.setPixelFormat(16, 16, 16, 16);
+			//	compressionOptions.setPixelType(nvtt::PixelType_UnsignedNorm);
+			//	compressionOptions.setPixelFormat(16, 0, 0, 0);
+		}
 	}
 	if (fast)
 	{
